@@ -1,0 +1,13 @@
+<configure
+  xmlns="http://namespaces.zope.org/zope"
+  xmlns:zcml="http://namespaces.zope.org/zcml"
+  i18n_domain="eea">
+
+  <configure zcml:condition="installed plone.app.async">
+    <subscriber
+      for="plone.app.async.interfaces.IQueueReady"
+      handler=".subscribers.configureQueue"
+      />
+  </configure>
+
+</configure>
