@@ -3,6 +3,8 @@ Changelog
 
 9.8.dev0 - (unreleased)
 -----------------------
+* Change: Add dedicated async quota for relations jobs
+  [avoinea refs #84915]
 * Change: fixed PyLint warnings and errors
   [valipod refs #84949]
 
